syntax = "proto3";

package rpc_arb_server;
import "google/protobuf/empty.proto";
import "arb_models.proto";
// ============================
// 仲裁服务接口定义
// ============================
service ArbServerRpcService {
  // === 分片管理 ===
  rpc GetShardNode(rpc_arb_models.BaseRequest) returns (rpc_arb_models.ShardNodeInfo);                            // 获取指定节点所属分片信息
  rpc UpdateShardState(rpc_arb_models.UpdateShardStateRequest) returns (rpc_arb_models.CommonResp);          // 更新分片状态

  // === 节点注册与生命周期 ===
  rpc RegisterNode(rpc_arb_models.BaseRequest) returns (rpc_arb_models.ShardNodeInfo);                          // 节点注册
  rpc ListAllNodes(google.protobuf.Empty) returns (rpc_arb_models.ListAllNodesResponse);            // 查询所有节点视图

  // === 节点状态与控制 ===
  rpc GracefulLeave(rpc_arb_models.BaseRequest) returns (rpc_arb_models.CommonResp);                         // 节点优雅退出

  rpc heartbeat(rpc_arb_models.BaseRequest) returns (rpc_arb_models.CommonResp);                            // 节点心跳检测
}
